products/neo-savant/cd/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neo-savant-ide
  labels:
    app.kubernetes.io/name: neo-savant-ide
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gke-gateway-stg
      sectionName: https
  hostnames:
    - neo-savant-ide.zilstg.dev
  rules:
    - backendRefs:
        - name: neo-savant-ide
          port: 80
